fix: spacing on arrow

--- a/src/pages/game.module.css
+++ b/src/pages/game.module.css
@@ -1,79 +1,89 @@
 .bg {
-    background-color: var(--bg);
-    height: 100vh;
+  background-color: var(--bg);
+  height: 100vh;
 }
 
 .code {
-    color: var(--button-bg);
-    font-size: 1em;
-    position: absolute;
-    bottom: 1em;
-    left: 1em;
+  color: var(--button-bg);
+  font-size: 1em;
+  position: absolute;
+  bottom: 1em;
+  left: 1em;
 }
 
 .title {
-    font-size: 2em;
-    color: white;
+  font-size: 2em;
+  color: white;
 }
 
 .title > span {
-    color: var(--theme);
+  color: var(--theme);
 }
 
 .deckArea {
-    width: calc((5em + 10px) * 5);
-    flex-wrap: wrap;
-    display: flex;
-    row-gap: 10px;
-    column-gap: 10px;
-    max-height: calc((7em + 10px) * 3);
-    overflow-y: auto;
+  width: calc((5em + 10px) * 5);
+  flex-wrap: wrap;
+  display: flex;
+  row-gap: 10px;
+  column-gap: 10px;
+  max-height: calc((7em + 10px) * 3);
+  overflow-y: auto;
 }
 
 .game {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 3em;
 }
 
 .playground {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 8em;
-    gap: 4em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 8em;
+  gap: 4em;
 }
 
 .score {
-    display: flex;
-    flex-direction: row;
-    gap: 3em;
+  display: flex;
+  flex-direction: row;
+  gap: 3em;
 }
 
 .score > h1 {
-    color: var(--theme);
+  color: var(--theme);
 }
 
 .score > h2 {
-    color: white;
-    font-size: 2em;
+  color: white;
+  font-size: 2em;
 }
 
 .cards {
-    display: flex;
-    flex-direction: row;
-    gap: 20em;
+  display: flex;
+  flex-direction: row;
 }
 
 .cards > div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3em;
 }
 
 .cards > div > h1 {
-    color: white;
-    font-size: 1em;
+  color: white;
+  font-size: 1em;
+}
+
+.ended {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.ended > span {
+  color: var(--theme);
 }
